--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1>Node File</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>
+		Node Bot Web site
+
+	</title>
+	<link rel="stylesheet" type="text/css" href="https://w3css.blueobsidian.repl.co/w3css/w3.css">
+</head>
+<style type="text/css">
+	body{
+		font-family: cursive;
+		font-size: 50px;
+		  background-color: #181828;
+	}
+</style>
+<body>
+
+<div class="w3-center">
+	<h1 class="w3-text-red">Node Site For Mine Bot</h1>
+<p>Testing</p>
+</div>
+
+
+</body>
+</html>
