--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>w
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initieal-scale=1">bmn fvmgfyhtfhvbk.jh.k
 	<title>
