--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initieal-scale=1">bmn fvmgfyhtfhvbk.jh.k
 	<title>
-		Node Bot Web siteffffw
+		Node Bot Web siteffffwddcdcd
 f
 	</title>
 	<link rel="stylesheet" type="text/css" href="https://w3css.blueobsidian.repl.co/w3css/w3.css">
